# rs-envconf

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
envconf/: Cargo.toml
envconf-derive/: Cargo.toml
envconf-derive/src/: attrs.rs  lib.rs
envconf/examples/: complex_types.rs  comprehensive.rs  custom_deserialize_fn.rs  custom_names.rs  optional_fields.rs
envconf/src/: de.rs  error.rs  lib.rs
envconf/tests/: integration_test.rs
examples/: basic.rs  complex_types.rs  comprehensive.rs  custom_deserialize_fn.rs  custom_names.rs  default_trait.rs  file_based_secrets.rs  optional_fields.rs  prefix.rs
serviceconf/: Cargo.toml  README.md
serviceconf-derive/: Cargo.toml  README.md
serviceconf-derive/src/: attrs.rs  lib.rs
serviceconf-derive/tests/: compile_fail.rs
serviceconf-derive/tests/ui/: deserializer_with_default.rs  deserializer_with_default.stderr  deserializer_with_default_trait.rs  deserializer_with_default_trait.stderr  option_with_default.rs  option_with_default.stderr  option_with_default_trait.rs  option_with_default_trait.stderr
serviceconf/src/: de.rs  error.rs  lib.rs
serviceconf/tests/: integration_test.rs
