[workspace]
members = ["serviceconf", "serviceconf-derive"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.84"
authors = ["Alisue <lambdalisue@gmail.com>"]
license = "MIT"
repository = "https://github.com/lambdalisue/rs-serviceconf"

[workspace.dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Proc macro dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# Test dependencies
serial_test = "3.2"
tempfile = "3.0"
