[package]
name = "envconf"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Declarative environment variable configuration library with file-based secret support"
keywords = ["env", "config", "kubernetes", "configuration", "derive"]
categories = ["config", "development-tools"]

[dependencies]
anyhow.workspace = true
envconf-derive = { version = "0.1.0", path = "../envconf-derive" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace = true

[[example]]
name = "basic"
path = "../examples/basic.rs"

[[example]]
name = "complex_types"
path = "../examples/complex_types.rs"

[[example]]
name = "comprehensive"
path = "../examples/comprehensive.rs"

[[example]]
name = "custom_deserialize_fn"
path = "../examples/custom_deserialize_fn.rs"

[[example]]
name = "custom_names"
path = "../examples/custom_names.rs"

[[example]]
name = "default_trait"
path = "../examples/default_trait.rs"

[[example]]
name = "file_based_secrets"
path = "../examples/file_based_secrets.rs"

[[example]]
name = "optional_fields"
path = "../examples/optional_fields.rs"

[[example]]
name = "prefix"
path = "../examples/prefix.rs"
