[package]
name = "serviceconf-derive"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Derive macro for serviceconf"
keywords = ["microservices", "config", "derive", "macro"]
categories = ["config", "development-tools"]
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true

[dev-dependencies]
serviceconf = { path = "../serviceconf" }
anyhow.workspace = true
